--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,43 @@
 body {
     background-image: url(https://jooinn.com/images/background-1.jpg);
-   
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 16px;
+    color: #777777;
+    margin: 0 auto;
+    
 }
+
+.Navigation {
+    background-color: white;
+    width: 960px;
+    position: fixed;
+    width: 100%;
+    margin: 0 auto;
+
+
+}
+
+.container {
+    width: 960px;
+    margin: 0 auto;
+}
+.Name {
+    background-color: #4aaaa5;
+    color: white;
+    width: 200px;
+    padding: 5px;
+    float: left;
+    
+    
+    
+}
+
+nav {
+    color: #777777;
+    font-size: 18px;
+    float: right;
+    margin-top: 40px;
+    
+    
+}
+
