Aligned picture 3 next to picture 1 and added text onto picture 3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,5 +90,25 @@ html, body {
 }
 
 .text-2 {
-    position: 
+    position: relative;
+    background-color: #4aaaa5;
+    color: white;
+    text-align: center;
+    width: 250px;
+    bottom: 80px;
+}
+
+.picture3 {
+    position: relative;
+    left: 350px;
+    bottom: 625px;
+}
+
+.text-3 {
+    position: relative;
+    background-color: #4aaaa5;
+    color: white;
+    text-align: center;
+    width: 250px;
+    bottom: 80px;
 }
